; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_bytecodewriter.c_sm_1_x_opcode.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_bytecodewriter.c_sm_1_x_opcode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bc_writer = type { i32 }
%struct.instruction = type { i64 }
%struct.bytecode_buffer = type { i32 }

@D3DSI_COISSUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bc_writer*, %struct.instruction*, i32, %struct.bytecode_buffer*)* @sm_1_x_opcode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sm_1_x_opcode(%struct.bc_writer* %0, %struct.instruction* %1, i32 %2, %struct.bytecode_buffer* %3) #0 {
  %5 = alloca %struct.bc_writer*, align 8
  %6 = alloca %struct.instruction*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.bytecode_buffer*, align 8
  store %struct.bc_writer* %0, %struct.bc_writer** %5, align 8
  store %struct.instruction* %1, %struct.instruction** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.bytecode_buffer* %3, %struct.bytecode_buffer** %8, align 8
  %9 = load %struct.instruction*, %struct.instruction** %6, align 8
  %10 = getelementptr inbounds %struct.instruction, %struct.instruction* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %4
  %14 = load i32, i32* @D3DSI_COISSUE, align 4
  %15 = load i32, i32* %7, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %7, align 4
  br label %17

17:                                               ; preds = %13, %4
  %18 = load %struct.bytecode_buffer*, %struct.bytecode_buffer** %8, align 8
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @put_dword(%struct.bytecode_buffer* %18, i32 %19)
  ret void
}

declare dso_local i32 @put_dword(%struct.bytecode_buffer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
